@@ -1,6 +1,9 @@
 package com.workin.legacy.employees.spreadsheet;
 
+import java.sql.Statement;
 import java.util.ArrayList;
+import java.util.Collections;
+import java.util.HashMap;
 import java.util.HashSet;
 import java.util.LinkedHashMap;
 import java.util.List;
@@ -9,8 +12,12 @@ import java.util.Set;
 
 import javax.sql.DataSource;
 
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.jdbc.core.JdbcTemplate;
 import org.springframework.stereotype.Component;
+import org.springframework.transaction.TransactionSystemException;
 import org.springframework.transaction.support.TransactionTemplate;
 import org.springframework.jdbc.datasource.DataSourceTransactionManager;
 
@@ -20,7 +27,6 @@ import org.springframework.security.crypto.password.PasswordEncoder;
 
 import com.workin.legacy.LegacyValues;
 import com.workin.legacy.auth.LegacyRequestContext;
-import com.workin.legacy.employees.LegacyEmployeeStore;
 import com.workin.legacy.employees.LegacyHrPeerCredentials;
 
 /**
@@ -40,9 +46,34 @@ import com.workin.legacy.employees.LegacyHrPeerCredentials;
  * <p>What each row's transaction does cover is the three writes that belong
  * together -- the employee update, the shift assignment and the salary patch.
  * A row whose salary write fails leaves no half-applied employee.
+ *
+ * <h2>Chunks first, rows when a chunk fails (D-294)</h2>
+ * <p>Rows are handled in chunks of up to
+ * {@link LegacyEmployeeUpdateSheetStore#CHUNK}. What validation reads about
+ * a chunk is read just before it, in sets
+ * ({@link LegacyEmployeeUpdateAnalyzer#prepare} and
+ * {@link LegacyEmployeeUpdateAnalyzer#refresh}); then one transaction writes
+ * the chunk, with one boundary re-read and each kind of write sent as one
+ * JDBC batch of one statement. That is the only thing about the per-row
+ * transactions that changes, and only while every row of the chunk
+ * succeeds -- which, when all of them commit, is indistinguishable from
+ * each committing alone. The moment one write fails, or the re-read
+ * disagrees with what the rows were validated against, the chunk is rolled
+ * back and <b>halved</b>, each half validated again in order and written
+ * alone, until a failing row is in a transaction of its own -- PHP's loop
+ * exactly for that row: it rolls back only itself and every other row
+ * lands. One bad row costs about twice the log of the chunk in extra
+ * transactions; a part under eight rows, or one that failed on a lock, is
+ * written a row at a time instead, so a chunk whose every row fails costs
+ * about {@code 1.25 n} transactions and a lock is waited out at most twice
+ * (the chunk's, then the row's own). The one failure that is not retried is the commit itself:
+ * whether its rows landed is then unknown, so they are reported failed, as
+ * PHP reports a row whose commit failed.
  */
 @Component
 public class LegacyEmployeeBulkUpdater {
+
+	private static final Logger LOG = LoggerFactory.getLogger(LegacyEmployeeBulkUpdater.class);
 
 	/**
 	 * {@code $allowed}: the columns a sheet may write, in PHP's order. The
@@ -60,9 +91,9 @@ public class LegacyEmployeeBulkUpdater {
 	/** Salary payload key to {@code salary_contracts} column, in PHP's order. */
 	private static final Map<String, String> SALARY_COLUMNS = salaryColumns();
 
-	private final LegacyEmployeeStore store;
-
 	private final LegacyEmployeeUpdateAnalyzer analyzer;
+
+	private final LegacyEmployeeUpdateSheetStore sheetStore;
 
 	private final LegacyClock clock;
 
@@ -73,17 +104,32 @@ public class LegacyEmployeeBulkUpdater {
 	/** {@code password_hash($plain, PASSWORD_BCRYPT)} -- the same encoder the create sheet uses. */
 	private final PasswordEncoder bcrypt;
 
+	/** Rows per write transaction; {@link LegacyEmployeeUpdateSheetStore#CHUNK} outside tests. */
+	private final int chunkSize;
+
+	@Autowired
 	public LegacyEmployeeBulkUpdater(
-			LegacyEmployeeStore store, LegacyEmployeeUpdateAnalyzer analyzer,
+			LegacyEmployeeUpdateAnalyzer analyzer, LegacyEmployeeUpdateSheetStore sheetStore,
 			LegacyClock clock, DataSource legacyDataSource, PasswordEncoder bcrypt) {
-		this.store = store;
+		this(analyzer, sheetStore, clock, legacyDataSource, bcrypt, LegacyEmployeeUpdateSheetStore.CHUNK);
+	}
+
+	/** With a smaller chunk, so a test can put a failing row mid-chunk and cross a boundary cheaply. */
+	LegacyEmployeeBulkUpdater(
+			LegacyEmployeeUpdateAnalyzer analyzer, LegacyEmployeeUpdateSheetStore sheetStore,
+			LegacyClock clock, DataSource legacyDataSource, PasswordEncoder bcrypt, int chunkSize) {
+		if (chunkSize < 1 || chunkSize > LegacyEmployeeUpdateSheetStore.CHUNK) {
+			throw new IllegalArgumentException("chunk size out of range: " + chunkSize);
+		}
 		this.analyzer = analyzer;
+		this.sheetStore = sheetStore;
 		this.clock = clock;
 		this.bcrypt = bcrypt;
+		this.chunkSize = chunkSize;
 		this.jdbcTemplate = new JdbcTemplate(legacyDataSource);
-		// Its own transaction manager over the same DataSource: each row's
-		// writes commit independently, which an ambient request transaction
-		// would defeat by folding them all into one.
+		// Its own transaction manager over the same DataSource: each chunk's
+		// (or, once halved, each part's) writes commit independently, which an
+		// ambient request transaction would defeat by folding them all into one.
 		this.transactionTemplate =
 				new TransactionTemplate(new DataSourceTransactionManager(legacyDataSource));
 	}
@@ -97,51 +143,45 @@ public class LegacyEmployeeBulkUpdater {
 	public Map<String, Object> updateRows(LegacyRequestContext context, LegacyPhpArray rows,
 			LegacyEmployeeSpreadsheetLookups lookups) {
 
-		long companyId = context.companyId();
-		Map<String, Map<String, Object>> employeesByCode = this.store.employeesByCode(companyId);
-		Set<String> seenCodes = new HashSet<>();
-		List<Map<String, Object>> failed = new ArrayList<>();
-		List<Object> updatedIds = new ArrayList<>();
-		long updated = 0;
-
 		// Iterated as a PHP array, not a Java list: row_index is $index + 1 over
 		// the *submitted keys*, so a JSON object or a sparse array numbers its
 		// rows the way PHP would rather than by position.
-		for (LegacyPhpArray.Entry entry : rows.entries()) {
-			Map<String, Object> row = rowOf(entry.value());
-			String code = LegacyEmployeeSpreadsheetErrors.normalizeEmployeeCode(
-					row.get("employee_code") == null ? "" : String.valueOf(row.get("employee_code")));
+		List<LegacyPhpArray.Entry> entries = rows.entries();
+		List<Map<String, Object>> sheetRows = new ArrayList<>(entries.size());
+		for (LegacyPhpArray.Entry entry : entries) {
+			sheetRows.add(rowOf(entry.value()));
+		}
 
-			// Checked before parsing, as PHP does: a second row for the same
-			// code fails on the duplicate alone, whatever else is wrong with it.
-			if (!code.isEmpty() && !seenCodes.add(code)) {
-				failed.add(failure(entry, List.of("employee_code_duplicate_in_file"), row));
-				continue;
+		// Checked before parsing, as PHP does: a second row for the same code
+		// fails on the duplicate alone, whatever else is wrong with it. It
+		// depends on nothing but the order, so it is settled once here.
+		boolean[] duplicate = new boolean[sheetRows.size()];
+		Set<String> seenCodes = new HashSet<>();
+		for (int position = 0; position < sheetRows.size(); position++) {
+			String code = codeOf(sheetRows.get(position));
+			duplicate[position] = !code.isEmpty() && !seenCodes.add(code);
+		}
+
+		Batch batch = new Batch(context,
+				this.analyzer.prepare(sheetRows, context.companyId(), lookups, this.chunkSize), sheetRows, duplicate);
+		for (int from = 0; from < sheetRows.size(); from += this.chunkSize) {
+			int to = Math.min(sheetRows.size(), from + this.chunkSize);
+			if (from > 0) {
+				this.analyzer.refresh(batch.sheet(), sheetRows.subList(from, to));
 			}
+			applyChunk(batch, from, to);
+		}
 
-			LegacyEmployeeUpdateAnalyzer.Parsed parsed =
-					this.analyzer.rowToUpdatePayload(row, companyId, lookups, employeesByCode);
-			if (!parsed.errors().isEmpty()) {
-				failed.add(failure(entry, parsed.errors(), row));
-				continue;
-			}
-
-			List<String> applyErrors = applyUpdate(context, parsed.payload());
-			if (!applyErrors.isEmpty()) {
-				failed.add(failure(entry, applyErrors, row));
-				continue;
-			}
-
-			updated++;
-			Object employeeId = parsed.payload().get("id");
-			updatedIds.add(employeeId);
-			// Re-read and re-cache, as PHP does. Duplicates are already
-			// rejected above, so nothing in this batch reads it back -- it is
-			// reproduced because dropping a write would be a silent divergence,
-			// not because a caller depends on it.
-			Map<String, Object> fresh = this.store.findOne(asLong(employeeId), companyId);
-			if (fresh != null && !code.isEmpty()) {
-				employeesByCode.put(code, fresh);
+		List<Map<String, Object>> failed = new ArrayList<>();
+		List<Object> updatedIds = new ArrayList<>();
+		long updated = 0;
+		for (int position = 0; position < entries.size(); position++) {
+			List<String> errors = batch.outcomes().get(position);
+			if (errors.isEmpty()) {
+				updated++;
+				updatedIds.add(batch.updatedIds().get(position));
+			} else {
+				failed.add(failure(entries.get(position), errors, sheetRows.get(position)));
 			}
 		}
 
@@ -150,6 +190,354 @@ public class LegacyEmployeeBulkUpdater {
 		result.put("failed", failed);
 		result.put("updated_ids", updatedIds);
 		return result;
+	}
+
+	/** One request's rows and what has been decided about them, by position. */
+	private record Batch(LegacyRequestContext context, LegacyEmployeeUpdateSheet sheet,
+			List<Map<String, Object>> rows, boolean[] duplicate, List<List<String>> outcomes,
+			Map<Integer, Object> updatedIds, Map<Integer, String[]> hashes) {
+
+		/** Outcomes start null, meaning undecided; an empty list is a row that applied. */
+		Batch(LegacyRequestContext context, LegacyEmployeeUpdateSheet sheet, List<Map<String, Object>> rows,
+				boolean[] duplicate) {
+			this(context, sheet, rows, duplicate, new ArrayList<>(Collections.nCopies(rows.size(), null)),
+					new HashMap<>(), new HashMap<>());
+		}
+	}
+
+	/**
+	 * One row, validated and ready to write -- or, when {@link #errors} is not
+	 * empty, the reason it will not be.
+	 */
+	private record Planned(int position, List<String> errors, Map<String, Object> payload,
+			Map<String, Object> employee, Map<String, Object> columns) {
+
+		static Planned failed(int position, List<String> errors) {
+			return new Planned(position, errors, null, null, null);
+		}
+
+		long id() {
+			return asLong(this.payload.get("id"));
+		}
+	}
+
+	/**
+	 * Below this many rows to write, a part that did not commit is written a
+	 * row at a time rather than halved again: halving pays two transactions
+	 * per level, and with several failing rows in a small part that is more
+	 * than writing its rows one by one. It bounds the worst case -- every row
+	 * failing at the database -- at about {@code n + n/4} transactions
+	 * for a chunk of {@code n} instead of {@code 2n}.
+	 */
+	private static final int ROW_BY_ROW_BELOW = 8;
+
+	/** How one chunk's failed transactions went, for its one summary line. */
+	private static final class Splits {
+
+		private int failedTransactions;
+
+		private final Set<String> causes = new java.util.TreeSet<>();
+	}
+
+	/**
+	 * Rows {@code from} (inclusive) to {@code to}, one chunk: applied by
+	 * {@link #apply}, and -- when any of its transactions failed -- one WARN
+	 * line for the whole chunk, however many parts it was split into.
+	 */
+	private void applyChunk(Batch batch, int from, int to) {
+		Splits splits = new Splits();
+		apply(batch, from, to, splits);
+		if (splits.failedTransactions > 0) {
+			// The class only -- a driver message can quote the row's values.
+			LOG.warn("employees.update_bulk.chunk_replayed tenant_id={} first_row={} rows={} failed_transactions={}"
+					+ " causes={}", batch.context().companyId(), from + 1, to - from, splits.failedTransactions,
+					splits.causes);
+		}
+	}
+
+	/**
+	 * Rows {@code from} (inclusive) to {@code to}: validated in order against
+	 * the holders the rows before them left, and written as one transaction.
+	 *
+	 * <p>A transaction that does not commit is rolled back and its rows are
+	 * halved and applied again, each half validated afresh in sheet order,
+	 * until the rows that fail are alone -- where a row's own transaction is
+	 * PHP's {@code apply_update()} exactly. One bad row among {@code n} costs
+	 * about {@code 2 log2 n} extra transactions rather than {@code n}. A part
+	 * of fewer than {@link #ROW_BY_ROW_BELOW} rows, or one that failed on a
+	 * lock -- a deadlock or a lock-wait timeout, which would be waited out
+	 * again at every level -- is written a row at a time instead.
+	 */
+	private void apply(Batch batch, int from, int to, Splits splits) {
+		LegacyEmployeeUpdateSheet sheet = batch.sheet();
+		int mark = sheet.mark();
+		List<Planned> writes = new ArrayList<>();
+		for (int position = from; position < to; position++) {
+			Planned planned = plan(batch, position);
+			batch.outcomes().set(position, planned.errors().isEmpty() ? null : planned.errors());
+			if (planned.errors().isEmpty()) {
+				// Claimed now so the next row in this chunk is validated as PHP
+				// validates it: after this row's phone was written.
+				claim(sheet, planned);
+				writes.add(planned);
+			}
+		}
+		if (writes.isEmpty()) {
+			return;
+		}
+		if (writes.size() == 1) {
+			List<String> errors = writeAlone(batch.context(), sheet, writes.get(0));
+			if (errors.isEmpty()) {
+				succeeded(batch, writes.get(0));
+			} else {
+				sheet.rollBackTo(mark);
+				batch.outcomes().set(writes.get(0).position(), errors);
+			}
+			return;
+		}
+		try {
+			this.transactionTemplate.executeWithoutResult(status -> write(batch.context(), sheet, writes));
+			for (Planned planned : writes) {
+				succeeded(batch, planned);
+			}
+			return;
+		} catch (TransactionSystemException ex) {
+			// The commit (or the rollback) itself failed, so whether the rows
+			// landed is unknown. Retrying could apply a shift assignment
+			// twice; PHP, whose commit fails the same way, reports the row
+			// failed. Every row written is reported so, and none is retried.
+			commitFailed(batch.context(), from, to - from, ex);
+			sheet.rollBackTo(mark);
+			for (Planned planned : writes) {
+				batch.outcomes().set(planned.position(), List.of("employee_update_failed"));
+			}
+			return;
+		} catch (RuntimeException ex) {
+			// Either a write failed or the re-read disagreed with the
+			// validation; the transaction is rolled back either way, and the
+			// parts below decide each row's own outcome.
+			splits.failedTransactions++;
+			splits.causes.add(ex.getClass().getSimpleName());
+			sheet.rollBackTo(mark);
+			if (writes.size() < ROW_BY_ROW_BELOW || onALock(ex)) {
+				for (int position = from; position < to; position++) {
+					apply(batch, position, position + 1, splits);
+				}
+				return;
+			}
+		}
+		int middle = writes.get(writes.size() / 2).position();
+		apply(batch, from, middle, splits);
+		apply(batch, middle, to, splits);
+	}
+
+	/** MariaDB's deadlock (1213) or lock-wait timeout (1205), however Spring wrapped it. */
+	private static boolean onALock(Throwable failure) {
+		for (Throwable cause = failure; cause != null; cause = cause.getCause()) {
+			if (cause instanceof org.springframework.dao.PessimisticLockingFailureException) {
+				return true;
+			}
+			if (cause instanceof java.sql.SQLException sql && (sql.getErrorCode() == 1213 || sql.getErrorCode() == 1205)) {
+				return true;
+			}
+		}
+		return false;
+	}
+
+	/** Rows whose commit failed may have landed: one WARN, wherever it happened. */
+	private static void commitFailed(LegacyRequestContext context, int from, int rows, RuntimeException ex) {
+		LOG.warn("employees.update_bulk.chunk_commit_failed tenant_id={} first_row={} rows={} cause={}",
+				context.companyId(), from + 1, rows, ex.getClass().getSimpleName());
+	}
+
+	private static void succeeded(Batch batch, Planned planned) {
+		batch.outcomes().set(planned.position(), List.of());
+		batch.updatedIds().put(planned.position(), planned.payload().get("id"));
+	}
+
+	private static void claim(LegacyEmployeeUpdateSheet sheet, Planned planned) {
+		if (planned.payload().containsKey("phone")) {
+			sheet.claimPhone(planned.employee(), planned.payload().get("phone"), planned.payload().get("country_code"));
+		}
+	}
+
+	/**
+	 * {@code employee_excel_row_to_update_payload()} and the part of
+	 * {@code employee_excel_apply_update()} that precedes its transaction,
+	 * against the sheet's reads. The peer rule is decided here against the
+	 * employee as the sheet read it, so a refused row is never hashed, and
+	 * decided again against the transaction's own re-read in {@link #write}.
+	 */
+	private Planned plan(Batch batch, int position) {
+		if (batch.duplicate()[position]) {
+			return Planned.failed(position, List.of("employee_code_duplicate_in_file"));
+		}
+		Map<String, Object> row = batch.rows().get(position);
+		LegacyEmployeeUpdateAnalyzer.Parsed parsed = this.analyzer.rowToUpdatePayload(row, batch.sheet());
+		if (!parsed.errors().isEmpty()) {
+			return Planned.failed(position, parsed.errors());
+		}
+		Map<String, Object> payload = parsed.payload();
+		long id = asLong(payload.get("id"));
+		Map<String, Object> employee = batch.sheet().employee(codeOf(row));
+		if (id < 1 || employee == null) {
+			return Planned.failed(position, List.of("employee_not_found"));
+		}
+		// D-289: the same peer rule update.php applies. The sheet repeats a
+		// phone it did not change, so only a value that would change counts --
+		// and working that out resolves the stored phone, so it is asked only
+		// of a row the rule could refuse at all.
+		if (refuses(batch.context(), id, employee, payload, batch.sheet())) {
+			return Planned.failed(position, List.of("forbidden"));
+		}
+
+		Map<String, Object> columns = new LinkedHashMap<>();
+		for (String column : ALLOWED_COLUMNS) {
+			if (payload.containsKey(column)) {
+				columns.put(column, payload.get(column));
+			}
+		}
+		if (payload.containsKey("password")) {
+			String plain = String.valueOf(payload.get("password")).trim();
+			if (!plain.isEmpty()) {
+				columns.put("password_hash", hash(batch, position, plain));
+			}
+		}
+		return new Planned(position, List.of(), payload, employee, columns);
+	}
+
+	/** bcrypt once per row, however many times a failed chunk makes it be planned. */
+	private String hash(Batch batch, int position, String plain) {
+		String[] cached = batch.hashes().get(position);
+		if (cached != null && cached[0].equals(plain)) {
+			return cached[1];
+		}
+		String hashed = this.bcrypt.encode(plain);
+		batch.hashes().put(position, new String[] {plain, hashed});
+		return hashed;
+	}
+
+	private static boolean refuses(LegacyRequestContext context, long id, Map<String, Object> employee,
+			Map<String, Object> payload, LegacyEmployeeUpdateSheet sheet) {
+		Object role = employee.get("role");
+		return LegacyHrPeerCredentials.refuses(context, id, role, LegacyHrPeerCredentials.FIELDS)
+				&& LegacyHrPeerCredentials.refuses(context, id, role, changedCredentials(payload, employee, sheet));
+	}
+
+	/**
+	 * One row in its own transaction -- PHP's {@code apply_update()} exactly.
+	 *
+	 * @return the errors, empty when the row applied
+	 */
+	private List<String> writeAlone(LegacyRequestContext context, LegacyEmployeeUpdateSheet sheet, Planned planned) {
+		try {
+			this.transactionTemplate.executeWithoutResult(status -> write(context, sheet, List.of(planned)));
+			return List.of();
+		} catch (RowRefused refused) {
+			return List.of(refused.error);
+		} catch (TransactionSystemException ex) {
+			commitFailed(context, planned.position(), 1, ex);
+			return List.of("employee_update_failed");
+		} catch (RuntimeException ex) {
+			// PHP catches Throwable, rolls back and reports one opaque code.
+			// The cause is deliberately not surfaced: the desktop client shows
+			// error_messages to an operator, and a driver message is neither
+			// translatable nor safe to render.
+			return List.of("employee_update_failed");
+		}
+	}
+
+	/** A row the boundary re-read no longer allows; rolls its transaction back. */
+	private static final class RowRefused extends RuntimeException {
+
+		private static final long serialVersionUID = 1L;
+
+		private final String error;
+
+		RowRefused(String error) {
+			super(error, null, false, false);
+			this.error = error;
+		}
+	}
+
+	/**
+	 * The writes of {@code rows}, inside the caller's transaction.
+	 *
+	 * <p>First the boundary re-read, one statement for all of them: each
+	 * employee re-read under the company predicate even though the sheet
+	 * already matched the code within this company, and the peer rule asked
+	 * again of what was just read -- the row about to be written, not the one
+	 * the request started from. A row that no longer passes throws, which
+	 * rolls the transaction back: alone, that is the row's own outcome; in a
+	 * chunk, it sends the chunk to be halved.
+	 *
+	 * <p>Then each kind of write as one batch, in PHP's order: employees,
+	 * shift assignments, salary patches, salary inserts. Each kind is <b>one
+	 * statement for every row</b> ({@link #EMPLOYEE_UPDATE},
+	 * {@link #SALARY_UPDATE}): a sheet's empty cell means "leave it alone",
+	 * so its rows write different columns, and a statement per column set
+	 * would be a batch per row on a real sheet. Within a batch the rows run in
+	 * sheet order, so a number one row gives up is released before a later
+	 * row claims it, as PHP's loop does.
+	 */
+	private void write(LegacyRequestContext context, LegacyEmployeeUpdateSheet sheet, List<Planned> rows) {
+		long companyId = context.companyId();
+		List<Long> ids = new ArrayList<>(rows.size());
+		for (Planned planned : rows) {
+			ids.add(planned.id());
+		}
+		Map<Long, Map<String, Object>> targets = this.sheetStore.applyTargets(ids, companyId);
+
+		List<Object[]> employeeUpdates = new ArrayList<>();
+		List<Object[]> shiftInserts = new ArrayList<>();
+		List<Object[]> salaryUpdates = new ArrayList<>();
+		List<Object[]> salaryInserts = new ArrayList<>();
+		String today = this.clock.todayAsString();
+
+		for (Planned planned : rows) {
+			long id = planned.id();
+			Map<String, Object> target = targets.get(id);
+			if (target == null) {
+				throw new RowRefused("employee_not_found");
+			}
+			if (refuses(context, id, target, planned.payload(), sheet)) {
+				throw new RowRefused("forbidden");
+			}
+			if (!planned.columns().isEmpty()) {
+				employeeUpdates.add(keepOrSet(EMPLOYEE_COLUMNS, planned.columns(), id, companyId));
+			}
+			Object shift = planned.payload().get("shift_id");
+			if (shift != null && asLong(shift) > 0) {
+				// Appended, never replacing: assignments are a history, and
+				// the effective date is today rather than the sheet's.
+				shiftInserts.add(new Object[] {id, asLong(shift), today});
+			}
+			@SuppressWarnings("unchecked")
+			Map<String, Object> salary = planned.payload().get("salary") instanceof Map
+					? (Map<String, Object>) planned.payload().get("salary") : null;
+			if (salary != null && !salary.isEmpty()) {
+				salaryPatch(id, salary, target, today, salaryUpdates, salaryInserts);
+			}
+		}
+
+		batch(EMPLOYEE_UPDATE, employeeUpdates);
+		batch("INSERT INTO employee_shift_assignments (employee_id, shift_id, effective_from) VALUES (?, ?, ?)",
+				shiftInserts);
+		batch(SALARY_UPDATE, salaryUpdates);
+		batch(SALARY_INSERT, salaryInserts);
+	}
+
+	/** One statement, every row's arguments, one batch. */
+	private void batch(String sql, List<Object[]> args) {
+		if (args.isEmpty()) {
+			return;
+		}
+		int[] counts = this.jdbcTemplate.batchUpdate(sql, args);
+		for (int count : counts) {
+			if (count == Statement.EXECUTE_FAILED) {
+				throw new IllegalStateException("a batched statement failed: " + sql);
+			}
+		}
 	}
 
 	/** One failed row, in PHP's key order -- {@code data} is the row as submitted. */
@@ -175,86 +563,9 @@ public class LegacyEmployeeBulkUpdater {
 		return new LinkedHashMap<>();
 	}
 
-	/**
-	 * {@code employee_excel_apply_update()}.
-	 *
-	 * @return the errors, empty when the row applied
-	 */
-	private List<String> applyUpdate(LegacyRequestContext context, Map<String, Object> payload) {
-		long companyId = context.companyId();
-		long id = asLong(payload.get("id"));
-		if (id < 1) {
-			return List.of("employee_not_found");
-		}
-		Map<String, Object> employee = this.store.findOne(id, companyId);
-		if (employee == null) {
-			// Re-read under the company predicate even though the analyzer
-			// already matched the code within this company: the payload
-			// travels through the client between analyze and update, so this
-			// is the boundary check, not a repeat of one.
-			return List.of("employee_not_found");
-		}
-		// D-289: the same peer rule update.php applies, read after the company
-		// check so the row is the one about to be written. The sheet repeats a
-		// phone it did not change, so only a value that would change counts.
-		if (LegacyHrPeerCredentials.refuses(
-				context, id, employee.get("role"), changedCredentials(payload, employee))) {
-			return List.of("forbidden");
-		}
-
-		List<String> setColumns = new ArrayList<>();
-		List<Object> params = new ArrayList<>();
-		for (String column : ALLOWED_COLUMNS) {
-			if (payload.containsKey(column)) {
-				setColumns.add(column + "=?");
-				params.add(payload.get(column));
-			}
-		}
-		if (payload.containsKey("password")) {
-			String plain = String.valueOf(payload.get("password")).trim();
-			if (!plain.isEmpty()) {
-				setColumns.add("password_hash=?");
-				params.add(this.bcrypt.encode(plain));
-			}
-		}
-
-		String hireDate = employee.get("hire_date") == null ? "" : String.valueOf(employee.get("hire_date"));
-
-		try {
-			this.transactionTemplate.executeWithoutResult(status -> {
-				if (!setColumns.isEmpty()) {
-					List<Object> args = new ArrayList<>(params);
-					args.add(id);
-					args.add(companyId);
-					this.jdbcTemplate.update(
-							"UPDATE employees SET " + String.join(", ", setColumns)
-									+ " WHERE id=? AND company_id=?",
-							args.toArray());
-				}
-				Object shift = payload.get("shift_id");
-				if (shift != null && asLong(shift) > 0) {
-					// Appended, never replacing: assignments are a history, and
-					// the effective date is today rather than the sheet's.
-					this.jdbcTemplate.update(
-							"INSERT INTO employee_shift_assignments (employee_id, shift_id, effective_from)"
-									+ " VALUES (?, ?, ?)",
-							id, asLong(shift), this.clock.todayAsString());
-				}
-				@SuppressWarnings("unchecked")
-				Map<String, Object> salary = payload.get("salary") instanceof Map
-						? (Map<String, Object>) payload.get("salary") : null;
-				if (salary != null && !salary.isEmpty()) {
-					applySalaryPatch(id, salary, hireDate);
-				}
-			});
-		} catch (RuntimeException ex) {
-			// PHP catches Throwable, rolls back and reports one opaque code.
-			// The cause is deliberately not surfaced: the desktop client shows
-			// error_messages to an operator, and a driver message is neither
-			// translatable nor safe to render.
-			return List.of("employee_update_failed");
-		}
-		return List.of();
+	private static String codeOf(Map<String, Object> row) {
+		return LegacyEmployeeSpreadsheetErrors.normalizeEmployeeCode(
+				row.get("employee_code") == null ? "" : String.valueOf(row.get("employee_code")));
 	}
 
 	/**
@@ -264,12 +575,16 @@ public class LegacyEmployeeBulkUpdater {
 	 * stored {@code 201012345678} is the sheet's {@code 01012345678}. The bulk
 	 * sheet has no active-flag column.
 	 */
-	private List<String> changedCredentials(Map<String, Object> payload, Map<String, Object> employee) {
+	private static List<String> changedCredentials(Map<String, Object> payload, Map<String, Object> employee,
+			LegacyEmployeeUpdateSheet sheet) {
 		List<String> changed = new ArrayList<>();
 		if (payload.containsKey("password") && !String.valueOf(payload.get("password")).trim().isEmpty()) {
 			changed.add("password");
 		}
-		String[] stored = this.analyzer.storedPhoneAsSheetResolves(employee);
+		if (!payload.containsKey("phone") && !payload.containsKey("country_code")) {
+			return changed;
+		}
+		String[] stored = LegacyEmployeeUpdateAnalyzer.storedPhoneAsSheetResolves(employee, sheet);
 		List<String> fields = List.of("phone", "country_code");
 		for (int index = 0; index < fields.size(); index++) {
 			String field = fields.get(index);
@@ -281,49 +596,93 @@ public class LegacyEmployeeBulkUpdater {
 		return changed;
 	}
 
+	/** The employee columns a row may write: {@link #ALLOWED_COLUMNS}, then the password's hash. */
+	private static final List<String> EMPLOYEE_COLUMNS = concat(ALLOWED_COLUMNS, List.of("password_hash"));
+
+	/**
+	 * One UPDATE for every row of a chunk, whatever columns each fills: each
+	 * column is {@code col = IF(?, ?, col)}, a flag and a value, so a column
+	 * the row leaves alone is assigned itself -- which MariaDB does not count
+	 * as a change, so {@code updated_at} moves only when a value does, as
+	 * with the per-row statement. A written value is bound exactly as the
+	 * per-row statement bound it and reaches the column through the same
+	 * conversion (checked value for value by the batching test).
+	 */
+	private static final String EMPLOYEE_UPDATE = "UPDATE employees SET " + keepOrSetClause(EMPLOYEE_COLUMNS)
+			+ " WHERE id=? AND company_id=?";
+
+	/** {@code employee_excel_apply_salary_patch()}'s UPDATE, in the same one-statement form. */
+	private static final String SALARY_UPDATE = "UPDATE salary_contracts SET "
+			+ keepOrSetClause(List.copyOf(SALARY_COLUMNS.values())) + " WHERE id=?";
+
+	private static String keepOrSetClause(List<String> columns) {
+		List<String> sets = new ArrayList<>(columns.size());
+		for (String column : columns) {
+			sets.add(column + "=IF(?, ?, " + column + ")");
+		}
+		return String.join(", ", sets);
+	}
+
+	/** The arguments for a keep-or-set statement: per column a flag and the value (null when kept), then the keys. */
+	private static Object[] keepOrSet(List<String> columns, Map<String, Object> written, Object... keys) {
+		List<Object> args = new ArrayList<>(columns.size() * 2 + keys.length);
+		for (String column : columns) {
+			boolean writes = written.containsKey(column);
+			args.add(writes ? 1 : 0);
+			args.add(writes ? written.get(column) : null);
+		}
+		args.addAll(List.of(keys));
+		return args.toArray();
+	}
+
+	private static List<String> concat(List<String> first, List<String> second) {
+		List<String> all = new ArrayList<>(first);
+		all.addAll(second);
+		return List.copyOf(all);
+	}
+
+	/** {@code employee_excel_apply_salary_patch()}'s INSERT. */
+	private static final String SALARY_INSERT = """
+			INSERT INTO salary_contracts (
+				employee_id, basic_salary, housing_allowance, transport_allowance,
+				food_allowance, risk_allowance, incentives, insurance_deduction,
+				tax_deduction, advances_deduction, fund_deduction, penalty_deduction,
+				effective_from
+			) VALUES (?, ?, 0, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?)""";
+
 	/**
 	 * {@code employee_excel_apply_salary_patch()}: patch the latest contract if
 	 * there is one, otherwise insert a fresh one with the missing components
-	 * zeroed.
+	 * zeroed. Collected into the batches rather than executed; {@code target}
+	 * is the transaction's own re-read, carrying the latest contract and the
+	 * hire date as they were before this row's writes.
 	 *
 	 * <p>Patching rather than versioning is legacy's choice and is reproduced:
 	 * a sheet that corrects a typo in this month's basic salary edits the
 	 * existing row instead of opening a new effective period, so history is
 	 * not manufactured for what the operator means as a correction.
 	 */
-	private void applySalaryPatch(long employeeId, Map<String, Object> salary, String fallbackEffectiveFrom) {
-		List<Map<String, Object>> latest = this.jdbcTemplate.queryForList(
-				"SELECT * FROM salary_contracts WHERE employee_id=?"
-						+ " ORDER BY effective_from DESC, id DESC LIMIT 1", employeeId);
-
-		if (!latest.isEmpty()) {
-			List<String> sets = new ArrayList<>();
-			List<Object> params = new ArrayList<>();
+	private static void salaryPatch(long employeeId, Map<String, Object> salary, Map<String, Object> target,
+			String today, List<Object[]> updates, List<Object[]> inserts) {
+		Object latest = target.get("contract_id");
+		if (latest != null) {
+			Map<String, Object> sets = new LinkedHashMap<>();
 			for (Map.Entry<String, String> entry : SALARY_COLUMNS.entrySet()) {
 				if (salary.containsKey(entry.getKey())) {
-					sets.add(entry.getValue() + "=?");
-					params.add(toDouble(salary.get(entry.getKey())));
+					sets.put(entry.getValue(), toDouble(salary.get(entry.getKey())));
 				}
 			}
 			if (sets.isEmpty()) {
 				return;
 			}
-			params.add(latest.get(0).get("id"));
-			this.jdbcTemplate.update(
-					"UPDATE salary_contracts SET " + String.join(", ", sets) + " WHERE id=?",
-					params.toArray());
+			updates.add(keepOrSet(List.copyOf(SALARY_COLUMNS.values()), sets, latest));
 			return;
 		}
 
 		// housing_allowance is hard-zeroed: the sheet has no column for it, and
 		// PHP writes a literal 0 rather than leaving it to the column default.
-		this.jdbcTemplate.update("""
-				INSERT INTO salary_contracts (
-					employee_id, basic_salary, housing_allowance, transport_allowance,
-					food_allowance, risk_allowance, incentives, insurance_deduction,
-					tax_deduction, advances_deduction, fund_deduction, penalty_deduction,
-					effective_from
-				) VALUES (?, ?, 0, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?)""",
+		String hireDate = target.get("hire_date") == null ? "" : String.valueOf(target.get("hire_date"));
+		inserts.add(new Object[] {
 				employeeId,
 				toDouble(salary.get("basic")),
 				toDouble(salary.get("transport")),
@@ -335,7 +694,7 @@ public class LegacyEmployeeBulkUpdater {
 				toDouble(salary.get("advances_deduction")),
 				toDouble(salary.get("fund_deduction")),
 				toDouble(salary.get("penalty_deduction")),
-				fallbackEffectiveFrom.isEmpty() ? this.clock.todayAsString() : fallbackEffectiveFrom);
+				hireDate.isEmpty() ? today : hireDate});
 	}
 
 	private static Map<String, String> salaryColumns() {
@@ -350,7 +709,7 @@ public class LegacyEmployeeBulkUpdater {
 		columns.put("advances_deduction", "advances_deduction");
 		columns.put("fund_deduction", "fund_deduction");
 		columns.put("penalty_deduction", "penalty_deduction");
-		return Map.copyOf(columns);
+		return java.util.Collections.unmodifiableMap(columns);
 	}
 
 	/** {@code (float) ($salary[$key] ?? 0)}. */
